style: fix territory field alignment

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,10 @@ body,html {
     sans-serif;
 }
 
-form {
+/* form {
   max-width: 950px;
   margin: 0 auto;
-}
+} */
 
 h1 {
   font-weight: 100;
